--- a/paper/Makefile
+++ b/paper/Makefile
@@ -5,8 +5,8 @@ all: $(MAIN).pdf
 
 $(MAIN).pdf: 	$(MAIN).tex  
 	$(LATEX) $(MAIN).tex 
-#	bibtex $(MAIN)
-#	$(LATEX) $(MAIN).tex 
+	bibtex $(MAIN)
+	$(LATEX) $(MAIN).tex 
 	$(LATEX) $(MAIN).tex 
 
 diff:	$(MAIN)_diff.pdf
