all files updated

--- a/paper/Makefile
+++ b/paper/Makefile
@@ -14,7 +14,7 @@ diff:	$(MAIN)_diff.pdf
 $(MAIN)_diff.pdf: $(MAIN).tex $(MAIN)_old.tex
 	latexdiff $(MAIN)_old.tex $(MAIN).tex > $(MAIN)_diff.tex
 	$(LATEX) $(MAIN)_diff.tex 
-	bibtex $(MAIN)_diff
+#	bibtex $(MAIN)_diff
 	$(LATEX) $(MAIN)_diff.tex 
 	$(LATEX) $(MAIN)_diff.tex 
 
@@ -23,7 +23,7 @@ tar :
 
 
 clean:
-	rm -f $(MAIN).pdf $(MAIN).out $(MAIN).bbl $(MAIN).aux *~
+	rm -f $(MAIN).pdf $(MAIN).out $(MAIN).bbl $(MAIN).aux $(MAIN)_diff.pdf *~
 
 view: 
 	open $(MAIN).pdf &
